src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v6/inventory.json.sha512
8fbc141bd3e6edfe346a5d475c7c15bc4ad912c501c12fadb8bf2eddde384fe20e4dc7c2acb800a9df1cdb6e953033e9e602f6f68b7bcf31d6bbb750f52faa03	inventory.json